syntax = "proto3";

package calculator;
option go_package = "proto/calculator";

message CalculatorRequest {
  int64 a = 1;
  int64 b = 2;
}

message CalculatorResponse {
  int64 result = 1;
}

message GetFibonacciRequest {
  int64 num = 1;
}

message GetFibonacciResponse {
  int64 num = 1;
}

service CalculatorService {
  rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};
  rpc GetFibonacci(GetFibonacciRequest) returns(stream GetFibonacciResponse) {};
}
